# TypeBridge

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_br.md  README_es.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: i18n.rs  main.rs  update.rs
src/clipboard/: clipboard.rs  mod.rs
src/settings/: config.rs  mod.rs
src/typing/: cancel.rs  engine.rs  mod.rs  window.rs  worker.rs
src/typing/wayland/: keysym.rs  libei.rs  mod.rs  vkbd.rs
src/ui/: app.rs  mod.rs  widgets.rs
