[package]
name = "typebridge"
version = "1.0.2"
edition = "2021"
description = "Types arbitrary text into the currently focused window (VNC, KVM, consoles, BIOS/IPMI)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/junglivre/TypeBridge"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_commonmark = { version = "0.20", default-features = false }
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
device_query = "2"
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
