[package]
name = "typebridge"
version = "2.2.0"
edition = "2021"
description = "Types arbitrary text into the currently focused window (VNC, KVM, consoles, BIOS/IPMI)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/junglivre/TypeBridge"

[dependencies]
# Use the wgpu renderer instead of glow: it falls back to software rendering
# (Direct3D WARP on Windows, llvmpipe/GL on Linux) on machines without a usable
# OpenGL 2.0+ driver — common on VMs, RDP sessions and older hardware.
eframe = { version = "0.31", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wgpu",
  "x11",
  "wayland",
] }
egui = "0.31"
egui_commonmark = { version = "0.20", default-features = false }
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
device_query = "2"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
sys-locale = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }
# Enable wgpu's Direct3D 12 backend so the software WARP adapter is available on
# machines without a GPU (RDP sessions, VMs); egui-wgpu doesn't enable it itself.
wgpu = { version = "24", features = ["dx12"] }

# Linux Wayland backends (libei · portal keysym · virtual keyboard).
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", default-features = false, features = ["async-std"] }
reis = "0.5"
xkbcommon = "0.2"
futures = "0.3"
wayland-client = "0.31"
wayland-protocols-misc = "0.3"
libc = "0.2"

[dev-dependencies]
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
